# pyadblocker

./: LICENSE  README.md  init_rules.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
Documentation/: READ.md  doc.md
pyadblocker/: main.py
pyadblocker/core/: dispatcher.py
pyadblocker/modules/: url_blocker.py
pyadblocker/rules/: baseline.udr  malware.udr
pyadblocker/tests/: test_html_js_filters.py
pyadblockr/core/: context.py  engine.py  loader.py
pyadblockr/modules/: html_cleaner.py  js_filter.py
pyadblockr/rules/: social.udr
pyadblockr/tests/: test_engine.py
